--- a/my_app/todo_list/templates/about.html
+++ b/my_app/todo_list/templates/about.html
@@ -3,5 +3,5 @@
 
 {% block content %}
 <h1>About Page</h1>
-<p>My Name Is {{ name }}</p>
+<p>My Name Is {{ first_name }} {{ last_name }}</p>
 {% endblock %}
