--- a/my_app/todo_list/templates/home.html
+++ b/my_app/todo_list/templates/home.html
@@ -2,5 +2,13 @@
 {% block title %}To-do List{% endblock %}
 
 {% block content %}
-<h1>Home Page</h1>
+
+
+    {% if all_items %}
+    <ul>
+        {% for things in all_items %}
+            <li>{{ things.item }}</li>
+        {% endfor %}
+    </ul>
+    {% endif %}
 {% endblock %}
